diesel_compile_tests/tests/compile-fail/as_changeset_on_struct_with_only_primary_key_should_panic.rs
#[macro_use] extern crate diesel;
#[macro_use] extern crate diesel_codegen;

table!(
    foo {
        id -> Integer,
        bar -> Integer,
    }
);

#[derive(AsChangeset)]
#[table_name="foo"]
struct Foo1 {
    id: i32,
    bar: i32,
}

#[derive(AsChangeset)]
//~^ ERROR: proc-macro derive panicked
#[table_name="foo"]
struct Foo2 {
    id: i32,
}
